# src/main/java/com/pm/graph_api_v2/dto/GraphQueryResultMode.java
@@ -1,0 +1,6 @@
+package com.pm.graph_api_v2.dto;
+
+public enum GraphQueryResultMode {
+    SEEDS,
+    GRAPH
+}
